--- a/ApiEcommerce.csproj
+++ b/ApiEcommerce.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5">
@@ -17,11 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Constans\" />
     <Folder Include="Controllers\" />
     <Folder Include="Data\" />
     <Folder Include="Mapping\" />
-    <Folder Include="Models\" />
-    <Folder Include="Models\Dtos\" />
     <Folder Include="Repository\" />
     <Folder Include="Repository\IRepository\" />
   </ItemGroup>
